# SMTH

./: .clang-format  CMakeLists.txt  LICENSE
assets/: license.txt  map.gltf
shaders/: cull.comp  mesh.frag  mesh.vert  shared.glsl  sky.frag  sky.vert
src/engine/assets/: GltfLoader.cpp  GltfLoader.hpp  ImageLoaderWIC.cpp  ImageLoaderWIC.hpp  ObjLoader.cpp  ObjLoader.hpp  mini_json.hpp
src/engine/core/: DeletionQueue.hpp  FrameArena.hpp  Log.hpp  SmallFn.hpp
src/engine/gfx/: Mesh.cpp  Mesh.hpp  RenderGraph.cpp  RenderGraph.hpp  Renderer.cpp  Renderer.hpp  UploadManager.cpp  UploadManager.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanHelpers.cpp  VulkanHelpers.hpp
src/engine/platform/: Input.cpp  Input.hpp  WindowUserData.hpp
src/engine/render/: Frustum.hpp  RenderScene.hpp  ShaderLayouts.hpp
src/game/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  main.cpp
